# logunit

./: .gitignore  API.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  genrsa.py  pyproject.toml  sample.env  test.py
api/: api.py
api/models/: log.py  service.py
api/rsa/: __init__.py
api/secured/: __init__.py
api/unsecured/: __init__.py
api/user/: __init__.py
app/: main.py
app/core/: database.py  fastjwt.py
